Added Unit Test cases and change in main
